# teenyverse

./: CMakeLists.txt  README.md
include/: electromechanical_object.h  object.h  physical_object.h  simplest_point_quadrotor.h
parameters/: mechanical_parameters.h
src/: electromechanical_object.cpp  main.cpp  object.cpp  physical_object.cpp  simplest_point_quadrotor.cpp
